@@ -194,7 +194,7 @@ public class ExpressionAnalyzer {
      * </p>
      */
     public Symbol convert(Expression expression, ExpressionAnalysisContext expressionAnalysisContext) {
-        return innerAnalyzer.process(expression, expressionAnalysisContext);
+        return ensureSingleValue(innerAnalyzer.process(expression, expressionAnalysisContext));
     }
 
     public Symbol generateQuerySymbol(Optional<Expression> whereExpression, ExpressionAnalysisContext context) {
@@ -325,6 +325,22 @@ public class ExpressionAnalyzer {
         }
     }
 
+    private Symbol ensureSingleValue(Symbol symbol) {
+        if (!(symbol instanceof SelectSymbol)) {
+            return symbol;
+        }
+        SelectSymbol selectSymbol = (SelectSymbol) symbol;
+        selectSymbol.setResultType(SelectSymbol.ResultType.SINGLE_COLUMN_SINGLE_VALUE);
+        // A SubQuery can return more than one row. We don't allow multiple rows,
+        // except in ANY or IN expressions. Thus, we wrap the result into a function
+        // which extracts the first element and checks if there are more than one element.
+        List<DataType> inputTypes = Collections.singletonList(symbol.valueType());
+        FunctionInfo singleValueFunction = getBuiltinFunctionInfo(SingleValueFunction.NAME, inputTypes);
+        // needs to be a mutable list as Crate manipulates symbols in-place...
+        List<Symbol> arguments = Arrays.asList(symbol);
+        return new Function(singleValueFunction, arguments);
+    }
+
     private class InnerExpressionAnalyzer extends AstVisitor<Symbol, ExpressionAnalysisContext> {
 
         @Override
@@ -435,7 +451,7 @@ public class ExpressionAnalyzer {
         @Override
         protected Symbol visitCast(Cast node, ExpressionAnalysisContext context) {
             DataType returnType = DataTypeAnalyzer.convert(node.getType());
-            return cast(process(node.getExpression(), context), returnType, false);
+            return cast(ensureSingleValue(process(node.getExpression(), context)), returnType, false);
         }
 
         @Override
@@ -444,7 +460,7 @@ public class ExpressionAnalyzer {
 
             if (CastFunctionResolver.supportsExplicitConversion(returnType)) {
                 try {
-                    return cast(process(node.getExpression(), context), returnType, true);
+                    return cast(ensureSingleValue(process(node.getExpression(), context)), returnType, true);
                 } catch (ConversionException e) {
                     return Literal.NULL;
                 }
@@ -455,9 +471,9 @@ public class ExpressionAnalyzer {
 
         @Override
         protected Symbol visitExtract(Extract node, ExpressionAnalysisContext context) {
-            Symbol expression = process(node.getExpression(), context);
+            Symbol expression = ensureSingleValue(process(node.getExpression(), context));
             expression = castIfNeededOrFail(expression, DataTypes.TIMESTAMP);
-            Symbol field = castIfNeededOrFail(process(node.getField(), context), DataTypes.STRING);
+            Symbol field = castIfNeededOrFail(ensureSingleValue(process(node.getField(), context)), DataTypes.STRING);
             return context.allocateFunction(
                 ExtractFunctions.GENERIC_INFO, Arrays.asList(field, expression));
         }
@@ -473,7 +489,7 @@ public class ExpressionAnalyzer {
              *
              *      x = ANY(array(1, 2, 3, ...))
              */
-            Symbol left = process(node.getValue(), context);
+            Symbol left = ensureSingleValue(process(node.getValue(), context));
             DataType targetType = left.valueType();
 
             Expression valueList = node.getValueList();
@@ -485,7 +501,7 @@ public class ExpressionAnalyzer {
             List<Symbol> symbols = new ArrayList<>(expressions.size());
 
             for (Expression expression : expressions) {
-                Symbol symbol = process(expression, context);
+                Symbol symbol = ensureSingleValue(process(expression, context));
                 if (targetType == DataTypes.UNDEFINED) {
                     targetType = symbol.valueType();
                     left = castIfNeededOrFail(left, targetType);
@@ -504,7 +520,7 @@ public class ExpressionAnalyzer {
 
         @Override
         protected Symbol visitIsNotNullPredicate(IsNotNullPredicate node, ExpressionAnalysisContext context) {
-            Symbol argument = process(node.getValue(), context);
+            Symbol argument = ensureSingleValue(process(node.getValue(), context));
             FunctionInfo isNullInfo =
                 getBuiltinFunctionInfo(io.crate.operation.predicate.IsNullPredicate.NAME, ImmutableList.of(argument.valueType()));
             return context.allocateFunction(
@@ -571,22 +587,22 @@ public class ExpressionAnalyzer {
                         "Unsupported logical binary expression " + node.getType().name());
             }
             List<Symbol> arguments = new ArrayList<>(2);
-            arguments.add(process(node.getLeft(), context));
-            arguments.add(process(node.getRight(), context));
+            arguments.add(ensureSingleValue(process(node.getLeft(), context)));
+            arguments.add(ensureSingleValue(process(node.getRight(), context)));
             return context.allocateFunction(functionInfo, arguments);
         }
 
         @Override
         protected Symbol visitNotExpression(NotExpression node, ExpressionAnalysisContext context) {
-            Symbol argument = process(node.getValue(), context);
+            Symbol argument = ensureSingleValue(process(node.getValue(), context));
             return context.allocateFunction(
                 getBuiltinFunctionInfo(NotPredicate.NAME, Arrays.asList(argument.valueType())), Arrays.asList(argument));
         }
 
         @Override
         protected Symbol visitComparisonExpression(ComparisonExpression node, ExpressionAnalysisContext context) {
-            Symbol left = process(node.getLeft(), context);
-            Symbol right = process(node.getRight(), context);
+            Symbol left = ensureSingleValue(process(node.getLeft(), context));
+            Symbol right = ensureSingleValue(process(node.getRight(), context));
 
             Comparison comparison = new Comparison(node.getType(), left, right);
             comparison.normalize(context);
@@ -600,14 +616,16 @@ public class ExpressionAnalyzer {
                 throw new UnsupportedFeatureException("ALL is not supported");
             }
 
-            Symbol leftSymbol = process(node.getLeft(), context);
+            Symbol leftSymbol = ensureSingleValue(process(node.getLeft(), context));
             Symbol arraySymbol = process(node.getRight(), context);
+
             DataType rightType = arraySymbol.valueType();
 
             if (!DataTypes.isCollectionType(rightType)) {
                 throw new IllegalArgumentException(
                     SymbolFormatter.format("invalid array expression: '%s'", arraySymbol));
             }
+
             DataType rightInnerType = ((CollectionType) rightType).innerType();
             if (rightInnerType.equals(DataTypes.OBJECT)) {
                 throw new IllegalArgumentException("ANY on object arrays is not supported");
@@ -638,8 +656,8 @@ public class ExpressionAnalyzer {
             if (node.getEscape() != null) {
                 throw new UnsupportedOperationException("ESCAPE is not supported.");
             }
-            Symbol rightSymbol = process(node.getValue(), context);
-            Symbol leftSymbol = process(node.getPattern(), context);
+            Symbol rightSymbol = ensureSingleValue(process(node.getValue(), context));
+            Symbol leftSymbol = ensureSingleValue(process(node.getPattern(), context));
             DataType rightType = rightSymbol.valueType();
 
             if (!DataTypes.isCollectionType(rightType)) {
@@ -659,9 +677,9 @@ public class ExpressionAnalyzer {
             if (node.getEscape() != null) {
                 throw new UnsupportedOperationException("ESCAPE is not supported.");
             }
-            Symbol expression = process(node.getValue(), context);
+            Symbol expression = ensureSingleValue(process(node.getValue(), context));
             expression = castIfNeededOrFail(expression, DataTypes.STRING);
-            Symbol pattern = castIfNeededOrFail(process(node.getPattern(), context), DataTypes.STRING);
+            Symbol pattern = castIfNeededOrFail(ensureSingleValue(process(node.getPattern(), context)), DataTypes.STRING);
             return context.allocateFunction(
                 getBuiltinFunctionInfo(LikeOperator.NAME, Arrays.asList(expression.valueType(), pattern.valueType())),
                 Arrays.asList(expression, pattern));
@@ -669,7 +687,7 @@ public class ExpressionAnalyzer {
 
         @Override
         protected Symbol visitIsNullPredicate(IsNullPredicate node, ExpressionAnalysisContext context) {
-            Symbol value = process(node.getValue(), context);
+            Symbol value = ensureSingleValue(process(node.getValue(), context));
 
             return context.allocateFunction(
                 getBuiltinFunctionInfo(io.crate.operation.predicate.IsNullPredicate.NAME, ImmutableList.of(value.valueType())),
@@ -681,13 +699,13 @@ public class ExpressionAnalyzer {
             // in statements like "where x = -1" the  positive (expression)IntegerLiteral (1)
             // is just wrapped inside a negativeExpression
             // the visitor here swaps it to getBuiltin -1 in a (symbol)LiteralInteger
-            return NEGATIVE_LITERAL_VISITOR.process(process(node.getValue(), context), null);
+            return NEGATIVE_LITERAL_VISITOR.process(ensureSingleValue(process(node.getValue(), context)), null);
         }
 
         @Override
         protected Symbol visitArithmeticExpression(ArithmeticExpression node, ExpressionAnalysisContext context) {
-            Symbol left = process(node.getLeft(), context);
-            Symbol right = process(node.getRight(), context);
+            Symbol left = ensureSingleValue(process(node.getLeft(), context));
+            Symbol right = ensureSingleValue(process(node.getRight(), context));
 
             return context.allocateFunction(
                 getBuiltinFunctionInfo(
@@ -704,7 +722,7 @@ public class ExpressionAnalyzer {
                 if (sessionContext.options().contains(Option.ALLOW_QUOTED_SUBSCRIPT)) {
                     String quotedSubscriptLiteral = getQuotedSubscriptLiteral(node.getName().toString());
                     if (quotedSubscriptLiteral != null) {
-                        return process(SqlParser.createExpression(quotedSubscriptLiteral), context);
+                        return ensureSingleValue(process(SqlParser.createExpression(quotedSubscriptLiteral), context));
                     } else {
                         throw exception;
                     }
@@ -747,7 +765,7 @@ public class ExpressionAnalyzer {
             } else {
                 List<Symbol> arguments = new ArrayList<>(values.size());
                 for (Expression value : values) {
-                    arguments.add(process(value, context));
+                    arguments.add(ensureSingleValue(process(value, context)));
                 }
                 return context
                     .allocateFunction(getBuiltinFunctionInfo(ArrayFunction.NAME, Symbols.typeView(arguments)), arguments);
@@ -763,7 +781,7 @@ public class ExpressionAnalyzer {
             List<Symbol> arguments = new ArrayList<>(values.size() * 2);
             for (Map.Entry<String, Expression> entry : values.entries()) {
                 arguments.add(Literal.of(entry.getKey()));
-                arguments.add(process(entry.getValue(), context));
+                arguments.add(ensureSingleValue(process(entry.getValue(), context)));
             }
             return context
                 .allocateFunction(getBuiltinFunctionInfo(MapFunction.NAME, Symbols.typeView(arguments)), arguments);
@@ -778,9 +796,9 @@ public class ExpressionAnalyzer {
         protected Symbol visitBetweenPredicate(BetweenPredicate node, ExpressionAnalysisContext context) {
             // <value> between <min> and <max>
             // -> <value> >= <min> and <value> <= max
-            Symbol value = process(node.getValue(), context);
-            Symbol min = process(node.getMin(), context);
-            Symbol max = process(node.getMax(), context);
+            Symbol value = ensureSingleValue(process(node.getValue(), context));
+            Symbol min = ensureSingleValue(process(node.getMin(), context));
+            Symbol max = ensureSingleValue(process(node.getMax(), context));
 
             Comparison gte = new Comparison(ComparisonExpression.Type.GREATER_THAN_OR_EQUAL, value, min);
             FunctionIdent gteIdent = gte.normalize(context).toFunctionIdent();
@@ -800,26 +818,26 @@ public class ExpressionAnalyzer {
             Map<Field, Symbol> identBoostMap = new HashMap<>(node.idents().size());
             DataType columnType = null;
             for (MatchPredicateColumnIdent ident : node.idents()) {
-                Symbol column = process(ident.columnIdent(), context);
+                Symbol column = ensureSingleValue(process(ident.columnIdent(), context));
                 if (columnType == null) {
                     columnType = column.valueType();
                 }
                 Preconditions.checkArgument(
                     column instanceof Field,
                     SymbolFormatter.format("can only MATCH on columns, not on %s", column));
-                Symbol boost = process(ident.boost(), context);
+                Symbol boost = ensureSingleValue(process(ident.boost(), context));
                 identBoostMap.put(((Field) column), boost);
             }
             assert columnType != null : "columnType must not be null";
             verifyTypesForMatch(identBoostMap.keySet(), columnType);
 
-            Symbol queryTerm = castIfNeededOrFail(process(node.value(), context), columnType);
+            Symbol queryTerm = castIfNeededOrFail(ensureSingleValue(process(node.value(), context)), columnType);
             String matchType = io.crate.operation.predicate.MatchPredicate.getMatchType(node.matchType(), columnType);
 
             List<Symbol> mapArgs = new ArrayList<>(node.properties().size() * 2);
             for (Map.Entry<String, Expression> e : node.properties().properties().entrySet()) {
                 mapArgs.add(Literal.of(e.getKey()));
-                mapArgs.add(process(e.getValue(), context));
+                mapArgs.add(ensureSingleValue(process(e.getValue(), context)));
             }
             Function options = context.allocateFunction(MapFunction.createInfo(Symbols.typeView(mapArgs)), mapArgs);
             return new io.crate.analyze.symbol.MatchPredicate(identBoostMap, queryTerm, matchType, options);
@@ -848,11 +866,7 @@ public class ExpressionAnalyzer {
              */
             Field field = fields.get(0);
             SingleColumnTableType singleColumnTableType = new SingleColumnTableType(field.valueType());
-            SelectSymbol selectSymbol = new SelectSymbol(relation, singleColumnTableType);
-            return context.allocateFunction(
-                getBuiltinFunctionInfo(SingleValueFunction.NAME, Collections.singletonList(singleColumnTableType)),
-                // needs to be a mutable list as Crate manipulates symbols in-place...
-                Arrays.asList(selectSymbol));
+            return new SelectSymbol(relation, singleColumnTableType);
         }
 
     }
